--- a/package.json
+++ b/package.json
@@ -18,21 +18,9 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
+    "eslint-plugin-vue": "^7.0.0",
+    "stylelint": "^14.8.2",
+    "stylelint-config-standard": "^25.0.0"
   },
   "browserslist": [
     "> 1%",
